--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Validate composer.json and composer.lock
-      run: composer validate
+      run: ls
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
