Install PHP7.4 in Github Actions #5

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,6 +18,7 @@ jobs:
 
     - name: Get Composer cache directory
       id: composer-cache
+      working-directory: ./app
       run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
     - name: Cache Composer dependencies
