--- a/app/composer.json
+++ b/app/composer.json
@@ -103,7 +103,8 @@
         "ci": [
             "@tests",
             "@phpstan"
-        ]
+        ],
+        "fix": "@php /usr/local/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "conflict": {
         "symfony/symfony": "*"
