--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,6 +1,3 @@
-.php_cs
-.php_cs.cache
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -16,3 +13,13 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
