--- a/app/.php_cs.dist
+++ b/app/.php_cs.dist
@@ -4,9 +4,7 @@ declare(strict_types=1);
 
 $finder = PhpCsFixer\Finder::create()
     ->in([__DIR__ . '/src', __DIR__ . '/tests'])
-    ->exclude('somedir')
-    ->notPath('Kernel.php')
-;
+    ->notPath('Kernel.php');
 
 return PhpCsFixer\Config::create()
     ->setRules([
@@ -26,5 +24,4 @@ return PhpCsFixer\Config::create()
         'ternary_to_null_coalescing' => true,
         'void_return' => true,
     ])
-    ->setFinder($finder)
-;
+    ->setFinder($finder);
