--- a/app/composer.json
+++ b/app/composer.json
@@ -38,6 +38,7 @@
         "twig/twig": "^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "easycorp/easy-log-handler": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpstan/extension-installer": "^1.0",
