Add user migration and fix PSR12 issues

--- a/app/phpcs.xml.dist
+++ b/app/phpcs.xml.dist
@@ -8,10 +8,7 @@
     <arg name="colors"/>
     <arg name="extensions" value="php"/>
 
-    <rule ref="PSR12">
-        <exclude name="PSR12.Files.OpenTag"/>
-        <exclude name="PSR12.Files.FileHeader"/>
-    </rule>
+    <rule ref="PSR12"/>
 
     <rule ref="vendor/slevomat/coding-standard/SlevomatCodingStandard/ruleset.xml">
         <exclude name="SlevomatCodingStandard.Namespaces.UseOnlyWhitelistedNamespaces"/>
@@ -54,6 +51,8 @@
     </rule>
     <rule ref="SlevomatCodingStandard.TypeHints.DeclareStrictTypes">
         <properties>
+            <property name="newlinesCountBetweenOpenTagAndDeclare" value="2"/>
+            <property name="newlinesCountAfterDeclare" value="2"/>
             <property name="spacesCountAroundEqualsSign" value="0"/>
         </properties>
     </rule>
