--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,9 @@ DEBUG_SERVER=docker-server
 
 NGINX_PORT=80
 
-POSTGRES_ROOT_PASSWORD=postgres
+POSTGRES_PASSWORD=db
+POSTGRES_USER=db
+POSTGRES_DB=db
 
 ADMINER_PORT=8080
 
