--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,9 @@ services:
         image: postgres:12.1-alpine
         restart: unless-stopped
         environment:
-            - "POSTGRES_PASSWORD=${POSTGRES_ROOT_PASSWORD}"
+            - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
+            - "POSTGRES_USER=${POSTGRES_USER}"
+            - "POSTGRES_DB=${POSTGRES_DB}"
         volumes:
             - "dbdata:/var/lib/postgresql/data"
 
