Add CodeSniffer linting in PHPStorm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
             - "./app/:/usr/src/app"
             - "./docker/app/php.ini:/usr/local/etc/php/php.ini:ro"
             - "./docker/app/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini:ro"
+            - "${CODE_SNIFFER_TMP}:/tmp"
         depends_on:
             - "db"
 
