Refactor registration form by moving logic from the controller into a service

--- a/app/phpcs.xml.dist
+++ b/app/phpcs.xml.dist
@@ -43,6 +43,7 @@
     <rule ref="SlevomatCodingStandard.Classes.TraitUseSpacing">
         <properties>
             <property name="linesCountBeforeFirstUse" value="0"/>
+            <property name="linesCountBeforeFirstUseWhenFirstInClass" value="0"/>
             <property name="linesCountBetweenUses" value="0"/>
             <property name="linesCountAfterLastUse" value="1"/>
             <property name="linesCountAfterLastUseWhenLastInClass" value="0"/>
