--- a/app/composer.json
+++ b/app/composer.json
@@ -40,6 +40,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "easycorp/easy-log-handler": "^1.0",
+        "liip/test-fixtures-bundle": "^1.6",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-doctrine": "^0.12",
