Add Composer script to reset app

--- a/app/composer.json
+++ b/app/composer.json
@@ -95,6 +95,12 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+        "reset": [
+            "@php bin/console doctrine:database:drop --force",
+            "@php bin/console doctrine:database:create",
+            "@php bin/console doctrine:migrations:migrate --no-interaction",
+            "@php bin/console doctrine:fixtures:load --no-interaction"
+        ],
         "ci": [
             "@lint",
             "@tests",
