Add Node container and install Encore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,14 @@ services:
         volumes:
             - "dbdata:/var/lib/postgresql/data"
 
+    frontend:
+        image: node:13.7.0-alpine3.11
+        restart: "no"
+        working_dir: /usr/src/app
+        command: yarn run docker
+        volumes:
+            - "./app/:/usr/src/app"
+
     adminer:
         image: adminer:4.7.5
         restart: unless-stopped
