--- a/app/composer.json
+++ b/app/composer.json
@@ -33,6 +33,7 @@
         "symfony/twig-bundle": "5.0.*",
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0"
