--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,13 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.28",
+        "bootstrap": "^4.4",
         "core-js": "^3.0",
+        "jquery": "^3.4",
+        "node-sass": "^4.13",
+        "popper.js": "^1.16",
         "regenerator-runtime": "^0.13",
+        "sass-loader": "^7.0",
         "webpack-notifier": "^1.6"
     },
     "license": "UNLICENSED",
