--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,6 +32,18 @@ jobs:
       working-directory: ./app
       run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 13.7
+
+    - name: Install Yarn
+      run: npm install -g yarn
+
+    - name: Install Yarn dependencies
+      working-directory: ./app
+      run: yarn run ci
+
     - name: Run CI
       working-directory: ./app
       run: composer run-script ci
