--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -6,8 +6,9 @@
          bootstrap="config/bootstrap.php"
          executionOrder="depends,defects"
          forceCoversAnnotation="true"
-         beStrictAboutCoversAnnotation="true"
+         beStrictAboutCoversAnnotation="false"
          beStrictAboutOutputDuringTests="true"
+         beStrictAboutTestsThatDoNotTestAnything="true"
          beStrictAboutTodoAnnotatedTests="true"
          verbose="true"
 >
