--- a/app/composer.json
+++ b/app/composer.json
@@ -120,6 +120,7 @@
             "@phpstan-tests"
         ],
         "tests": "@php bin/phpunit",
+        "tests-coverage": "@php bin/phpunit --coverage-clover=coverage.xml",
         "phpstan": [
             "@php bin/console cache:warmup --env=dev",
             "@php bin/console cache:warmup --env=test",
