--- a/app/.editorconfig
+++ b/app/.editorconfig
@@ -3,7 +3,7 @@ charset = utf-8
 end_of_line = lf
 indent_size = 4
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 120
 tab_width = 4
 ij_continuation_indent_size = 8
@@ -145,7 +145,7 @@ ij_javascript_array_initializer_wrap = off
 ij_javascript_assignment_wrap = off
 ij_javascript_binary_operation_sign_on_next_line = false
 ij_javascript_binary_operation_wrap = off
-ij_javascript_blacklist_imports = rxjs/Rx,node_modules/**/*,@angular/material,@angular/material/typings/**
+ij_javascript_blacklist_imports = rxjs/Rx,node_modules/**/*,@angular/material,@angular/material/typings/**,~/node_modules/**/*,@/node_modules/**/*
 ij_javascript_blank_lines_after_imports = 1
 ij_javascript_blank_lines_around_class = 1
 ij_javascript_blank_lines_around_field = 0
@@ -302,7 +302,7 @@ ij_coffeescript_align_var_statements = 0
 ij_coffeescript_array_initializer_new_line_after_left_brace = false
 ij_coffeescript_array_initializer_right_brace_on_new_line = false
 ij_coffeescript_array_initializer_wrap = normal
-ij_coffeescript_blacklist_imports = rxjs/Rx,node_modules/**/*,@angular/material,@angular/material/typings/**
+ij_coffeescript_blacklist_imports = rxjs/Rx,node_modules/**/*,@angular/material,@angular/material/typings/**,~/node_modules/**/*,@/node_modules/**/*
 ij_coffeescript_blank_lines_around_function = 1
 ij_coffeescript_call_parameters_new_line_after_left_paren = false
 ij_coffeescript_call_parameters_right_paren_on_new_line = false
@@ -433,7 +433,7 @@ ij_typescript_array_initializer_wrap = off
 ij_typescript_assignment_wrap = off
 ij_typescript_binary_operation_sign_on_next_line = false
 ij_typescript_binary_operation_wrap = off
-ij_typescript_blacklist_imports = rxjs/Rx,node_modules/**/*,@angular/material,@angular/material/typings/**
+ij_typescript_blacklist_imports = rxjs/Rx,node_modules/**/*,@angular/material,@angular/material/typings/**,~/node_modules/**/*,@/node_modules/**/*
 ij_typescript_blank_lines_after_imports = 1
 ij_typescript_blank_lines_around_class = 1
 ij_typescript_blank_lines_around_field = 0
@@ -596,8 +596,8 @@ ij_php_align_multiline_binary_operation = false
 ij_php_align_multiline_chained_methods = false
 ij_php_align_multiline_extends_list = true
 ij_php_align_multiline_for = true
-ij_php_align_multiline_parameters = true
-ij_php_align_multiline_parameters_in_calls = false
+ij_php_align_multiline_parameters = false
+ij_php_align_multiline_parameters_in_calls = true
 ij_php_align_multiline_ternary_operation = false
 ij_php_align_phpdoc_comments = false
 ij_php_align_phpdoc_param_names = false
@@ -613,8 +613,8 @@ ij_php_binary_operation_wrap = on_every_item
 ij_php_blank_lines_after_class_header = 0
 ij_php_blank_lines_after_function = 1
 ij_php_blank_lines_after_imports = 1
-ij_php_blank_lines_after_opening_tag = 0
-ij_php_blank_lines_after_package = 0
+ij_php_blank_lines_after_opening_tag = 1
+ij_php_blank_lines_after_package = 1
 ij_php_blank_lines_around_class = 1
 ij_php_blank_lines_around_constants = 0
 ij_php_blank_lines_around_field = 0
@@ -623,8 +623,8 @@ ij_php_blank_lines_before_class_end = 0
 ij_php_blank_lines_before_imports = 1
 ij_php_blank_lines_before_method_body = 0
 ij_php_blank_lines_before_package = 1
-ij_php_blank_lines_before_return_statement = 0
-ij_php_blank_lines_between_imports = 0
+ij_php_blank_lines_before_return_statement = 1
+ij_php_blank_lines_between_imports = 1
 ij_php_block_brace_style = end_of_line
 ij_php_call_parameters_new_line_after_left_paren = true
 ij_php_call_parameters_right_paren_on_new_line = true
@@ -636,7 +636,7 @@ ij_php_comma_after_last_array_element = true
 ij_php_concat_spaces = true
 ij_php_copyright_weight = 28
 ij_php_deprecated_weight = 28
-ij_php_do_while_brace_force = if_multiline
+ij_php_do_while_brace_force = always
 ij_php_else_if_style = combine
 ij_php_else_on_new_line = false
 ij_php_example_weight = 28
@@ -645,14 +645,14 @@ ij_php_extends_list_wrap = on_every_item
 ij_php_fields_default_visibility = private
 ij_php_filesource_weight = 28
 ij_php_finally_on_new_line = false
-ij_php_for_brace_force = if_multiline
-ij_php_for_statement_new_line_after_left_paren = false
-ij_php_for_statement_right_paren_on_new_line = false
+ij_php_for_brace_force = always
+ij_php_for_statement_new_line_after_left_paren = true
+ij_php_for_statement_right_paren_on_new_line = true
 ij_php_for_statement_wrap = off
 ij_php_force_short_declaration_array_style = true
 ij_php_global_weight = 28
 ij_php_group_use_wrap = on_every_item
-ij_php_if_brace_force = if_multiline
+ij_php_if_brace_force = always
 ij_php_if_lparen_on_next_line = true
 ij_php_if_rparen_on_next_line = true
 ij_php_ignore_weight = 28
@@ -661,8 +661,8 @@ ij_php_indent_break_from_case = true
 ij_php_indent_case_from_switch = true
 ij_php_indent_code_in_php_tags = false
 ij_php_internal_weight = 28
-ij_php_keep_blank_lines_after_lbrace = 2
-ij_php_keep_blank_lines_before_right_brace = 2
+ij_php_keep_blank_lines_after_lbrace = 0
+ij_php_keep_blank_lines_before_right_brace = 0
 ij_php_keep_blank_lines_in_code = 2
 ij_php_keep_blank_lines_in_declarations = 2
 ij_php_keep_control_statement_in_one_line = true
@@ -785,11 +785,10 @@ ij_php_uses_weight = 28
 ij_php_var_weight = 28
 ij_php_variable_naming_style = camel_case
 ij_php_version_weight = 28
-ij_php_while_brace_force = if_multiline
+ij_php_while_brace_force = always
 ij_php_while_on_new_line = false
 
 [{composer.lock,.babelrc,.stylelintrc,.eslintrc,jest.config,bowerrc,*.json,*.jsb3,*.jsb2}]
-indent_size = 4
 ij_json_keep_blank_lines_in_code = 0
 ij_json_keep_indents_on_empty_lines = false
 ij_json_keep_line_breaks = true
