Add Project, Bug and Comment entities

--- a/app/phpstan.neon
+++ b/app/phpstan.neon
@@ -6,3 +6,4 @@ parameters:
         objectManagerLoader: '%rootDir%/../../../build/phpstan/doctrine-orm-bootstrap.php'
     excludes_analyse:
         - '%rootDir%/../../../src/Migrations/*'
+    checkGenericClassInNonGenericObjectType: false
