Add Feature Flag for HTML Validation in forms

--- a/app/.env
+++ b/app/.env
@@ -31,3 +31,6 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+# Set HTML5 validation for forms on ("true") or of ("false").
+HTML_VALIDATION=true
