--- a/app/.env.docker
+++ b/app/.env.docker
@@ -1,3 +1,4 @@
 APP_ENV=dev
 APP_SECRET=3d9b96c661cb9fa557018248c7bbca62
 DATABASE_URL=postgresql://db:db@db/db?serverVersion=12&charset=utf8
+HTML_VALIDATION=false
