--- a/app/composer.json
+++ b/app/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "doctrine/orm": "^2.7",
         "phpdocumentor/reflection-docblock": "^4.3",
+        "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
