--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -40,6 +40,7 @@
             <directory suffix=".php">src</directory>
             <exclude>
                 <directory suffix=".php">src/DataFixtures</directory>
+                <directory suffix=".php">src/DataTransferObject</directory>
                 <directory suffix=".php">src/Doctrine</directory>
                 <directory suffix=".php">src/Entity</directory>
                 <directory suffix=".php">src/Migrations</directory>
