Install Faker for fake data in fixtures

--- a/app/composer.json
+++ b/app/composer.json
@@ -43,6 +43,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "easycorp/easy-log-handler": "^1.0",
+        "fzaninotto/faker": "^1.9",
         "jangregor/phpstan-prophecy": "^0.6",
         "liip/test-fixtures-bundle": "^1.6",
         "phpstan/extension-installer": "^1.0",
