--- a/app/phpstan.neon
+++ b/app/phpstan.neon
@@ -7,3 +7,5 @@ parameters:
     excludes_analyse:
         - '%rootDir%/../../../src/Migrations/*'
     checkGenericClassInNonGenericObjectType: false
+    ignoreErrors:
+        - '#^Access to an undefined property Symfony\\Component\\Validator\\Constraint::\$message.$#'
