--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,2 @@
 sonar.sources=app/src, app/tests, app/templates, app/public, app/translations
-sonar.exclusions=app/src/Migrations
+sonar.exclusions=app/public/index.php, app/src/Migrations/**
