--- a/app/config/packages/prod/monolog.yaml
+++ b/app/config/packages/prod/monolog.yaml
@@ -6,7 +6,8 @@ monolog:
             handler: nested
             excluded_http_codes: [404, 405]
         nested:
-            type: stream
+            type: rotating_file
+            max_files: 14
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
         console:
@@ -14,7 +15,8 @@ monolog:
             process_psr_3_messages: false
             channels: ["!event", "!doctrine"]
         deprecation:
-            type: stream
+            type: rotating_file
+            max_files: 14
             path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
         deprecation_filter:
             type: filter
