--- a/app/composer.json
+++ b/app/composer.json
@@ -129,7 +129,8 @@
         "unit": "@php bin/phpunit --testsuit unit",
         "integration": "@php bin/phpunit --testsuit integration",
         "functional": "@php bin/phpunit --testsuit functional",
-        "tests-coverage": "@php bin/phpunit --coverage-clover=coverage.xml",
+        "code-coverage": "@php bin/phpunit --coverage-html coverage",
+        "codecov": "@php bin/phpunit --coverage-clover coverage/coverage.xml",
         "phpstan": [
             "@php bin/console cache:warmup --env=dev",
             "@php bin/console cache:warmup --env=test",
