--- a/app/composer.json
+++ b/app/composer.json
@@ -125,12 +125,12 @@
             "@phpstan-src",
             "@phpstan-tests"
         ],
-        "tests": "@php bin/phpunit",
-        "unit": "@php bin/phpunit --testsuit unit",
-        "integration": "@php bin/phpunit --testsuit integration",
-        "functional": "@php bin/phpunit --testsuit functional",
-        "code-coverage": "@php bin/phpunit --coverage-html coverage",
-        "codecov": "@php bin/phpunit --coverage-clover coverage/coverage.xml",
+        "tests": "@php vendor/bin/simple-phpunit",
+        "unit": "@php vendor/bin/simple-phpunit --testsuit unit",
+        "integration": "@php vendor/bin/simple-phpunit --testsuit integration",
+        "functional": "@php vendor/bin/simple-phpunit --testsuit functional",
+        "code-coverage": "@php vendor/bin/simple-phpunit --coverage-html coverage",
+        "codecov": "@php vendor/bin/simple-phpunit --coverage-clover coverage/coverage.xml",
         "phpstan": [
             "@php bin/console cache:warmup --env=dev",
             "@php bin/console cache:warmup --env=test",
